--- a/Aldu_fw/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+++ b/Aldu_fw/.settings/org.eclipse.cdt.managedbuilder.core.prefs
@@ -1,10 +1,20 @@
 eclipse.preferences.version=1
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.51535632/CPATH/delimiter=;
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.51535632/CPATH/operation=remove
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.51535632/C_INCLUDE_PATH/delimiter=;
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.51535632/C_INCLUDE_PATH/operation=remove
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.51535632/append=true
+environment/buildEnvironmentInclude/com.atollic.truestudio.configuration.release.51535632/appendContributed=true
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.402818175/CPATH/delimiter=;
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.402818175/CPATH/operation=remove
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.402818175/C_INCLUDE_PATH/delimiter=;
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.402818175/C_INCLUDE_PATH/operation=remove
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.402818175/append=true
 environment/buildEnvironmentInclude/com.atollic.truestudio.exe.debug.402818175/appendContributed=true
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.51535632/LIBRARY_PATH/delimiter=;
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.51535632/LIBRARY_PATH/operation=remove
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.51535632/append=true
+environment/buildEnvironmentLibrary/com.atollic.truestudio.configuration.release.51535632/appendContributed=true
 environment/buildEnvironmentLibrary/com.atollic.truestudio.exe.debug.402818175/LIBRARY_PATH/delimiter=;
 environment/buildEnvironmentLibrary/com.atollic.truestudio.exe.debug.402818175/LIBRARY_PATH/operation=remove
 environment/buildEnvironmentLibrary/com.atollic.truestudio.exe.debug.402818175/append=true
